--- a/templates/default/admin.css
+++ b/templates/default/admin.css
@@ -72,14 +72,14 @@ h1#admintitle {
 }
 #admincontent {
 	background-color: #EFEFEF;
-	padding: 10px 10px 0 10px;
+	padding: 10px 10px 10px 10px;
 	margin: 0px 0px 20px 195px;
 	text-align: left;
 	border: 1px solid silver;
 	border-top: 0px;
 	line-height: 150%;
 }
-#admincontent h2, #admincontent p, #admincontent ul, #admincontent fieldset {
+#admincontent h2, #admincontent p, #admincontent ul, #admincontent fieldset, #admincontent table {
 	margin: 0px 0px 10px 0px;
 }
 #admincontent h2 {
@@ -104,9 +104,12 @@ h1#admintitle {
 #admincontent fieldset {
 	padding: 10px;
 	border: 1px solid silver;
+	margin: 0px auto 10px auto;
+	width: 94%;
 }
 #admincontent fieldset legend {
 	padding: 0 5px 0 5px;
+	color: #000;
 }
 #admincontent #resultset {
 	font-size: 8pt;
