--- a/templates/default/admin.css
+++ b/templates/default/admin.css
@@ -72,7 +72,7 @@ h1#admintitle {
 }
 #admincontent {
 	background-color: #EFEFEF;
-	padding: 10px 10px 10px 10px;
+	padding: 10px 10px 0 10px;
 	margin: 0px 0px 20px 195px;
 	text-align: left;
 	border: 1px solid silver;
@@ -186,6 +186,7 @@ h1#admintitle {
 #adminfunctionsmenu {
 	list-style: none;
 	margin-left: 0px !important;
+	line-height: 170%;
 }
 #adminfunctionsmenu li {
 	display: inline;
