--- a/templates/default/styles.css
+++ b/templates/default/styles.css
@@ -568,6 +568,11 @@ table.maintable td.minimal {
 	white-space: nowrap;
 	text-align: center;
 }
+table.maintable td.avatar-field {
+	background-color: #E8E8E8;
+	width: 80px;
+	text-align: center;
+}
 #pagelinksothertop {
 	text-align: left;
 	font-weight: bold;
