--- a/templates/default/styles.css
+++ b/templates/default/styles.css
@@ -82,6 +82,9 @@ input[type="submit"], input[type="reset"], input[type="button"] {
 label, input[type="radio"], input[type="checkbox"], select {
 	cursor: pointer;
 }
+input[type="text"]:focus, input[type="password"]:focus, textarea:focus {
+	border-color: #369;
+}
 optgroup option {
 	padding: 0 10px 0 10px;
 }
