- Logical part plus integration of a math-based or custom question based anti-spam feature. - Added random_seed() function to seed the random generator on old PHP versions. - Use base file name in functions::make_url().

--- a/templates/default/styles.css
+++ b/templates/default/styles.css
@@ -687,6 +687,13 @@ p#linkbar #rss-feed-icon img {
 #post-options input, #post-options label {
 	margin: 5px 0 0 0;
 }
+
+table#spamquestion {
+	clear: both;
+	margin: 0px auto 20px auto;
+	width: 67%;
+}
+
 #bottom {
 	clear: both;
 	float: left;
