--- a/templates/default/admin.css
+++ b/templates/default/admin.css
@@ -24,6 +24,7 @@
 	border-left: 1px solid silver;
 	border-top: 1px solid silver;
 	white-space: nowrap;
+	text-shadow: #4F4F4F 1px 1px 1px;
 }
 #adminlogin td {
 	background-color: #EFEFEF;
@@ -49,10 +50,12 @@
 	font-weight: bold;
 }
 #adminmenu ul li ul {
-	margin: 0px 0px 6px 6px;
+	margin: 0px 0px 6px 6px;	
+	font-weight: normal;
+}
+#adminmenu ul li ul li {
 	padding: 0px 0px 0px 6px;
 	border-left: 2px solid silver;
-	font-weight: normal;
 }
 #adminmenu ul li ul a {
 	display: block;
@@ -61,6 +64,10 @@
 	font-weight: bold;
 	color: #555 !important;
 	text-decoration: none !important;
+}
+#adminmenu ul li ul li.selected {
+	border-left: 3px solid #369;
+	padding-left: 5px;
 }
 h1#admintitle {
 	color: #EBD6AD;
@@ -74,6 +81,7 @@ h1#admintitle {
 	padding: 4px 6px 4px 6px;
 	margin: 0px 0px 0px 195px;
 	border: 1px solid silver;
+	text-shadow: #4F4F4F 1px 1px 1px;
 }
 #admincontent {
 	background-color: #EFEFEF;
@@ -173,11 +181,19 @@ h1#admintitle {
 	text-align: center;
 	background-color: #E8E8E8;
 }
+.adminconfigtable td.submit input, #adminregulartable td.submit input {
+	font-weight: bold;
+	min-width: 65px;
+}
 #admincontent p.submit {
 	font-weight: bold;
 	padding: 3px;
 	background-color: #E8E8E8;
 	text-align: center;
+}
+#admincontent p.submit input {
+	font-weight: bold;
+	min-width: 65px;
 }
 #admincontent textarea {
 	font-size: 8pt !important;
