--- a/templates/default/styles.css
+++ b/templates/default/styles.css
@@ -50,50 +50,22 @@ a.administrator:link, a.administrator:active, a.administrator:visited {
 a.moderator:link, a.moderator:active, a.moderator:visited {
 	color: #0000B2 !important;
 }
-input, select, textarea {
-	font-size: 8pt !important;
-	font-family: verdana, sans-serif !important;
-	background-color: #FFF;
-}
-input, textarea {
-	padding: 2px;
-	border: 1px solid silver;
-}
-select * {
-	font-size: 8pt !important;
-	font-family: verdana, sans-serif !important;
-}
-select option {
-	padding: 0 10px 0 0;
-}
+
 textarea {
 	width: 99%;
 	font-size: 9pt !important;
+	font-family: Verdana, sans-serif !important;
 }
 textarea#tags-txtarea {
-	/*
-		fixes a strange bug in Firefox 1.0 making
-		the box wider when hovering BBCode tags
-	*/
 	width: 98%;
 }
-input[type="submit"], input[type="reset"], input[type="button"] {
-	padding: 0 10px 0 10px;
-	cursor: pointer;
-	font-weight: bold;
-	color: #444;
-	border-bottom: 2px solid silver;
-}
+input[type="submit"], input[type="reset"], input[type="button"],
 label, input[type="radio"], input[type="checkbox"], select {
 	cursor: pointer;
-}
-input[type="text"]:focus, input[type="password"]:focus, textarea:focus {
-	border-color: #369;
 }
 optgroup option {
 	padding: 0 10px 0 10px;
 }
-
 
 pre.code {
 	display: block;
@@ -248,6 +220,7 @@ table.maintable th, table.confirmform th {
 	border-left: 1px solid silver;
 	border-top: 1px solid silver;
 	white-space: nowrap;
+	text-shadow: #4F4F4F 1px 1px 1px;
 }
 table.maintable td, table.confirmform td, td.msg {
 	background-color: #EFEFEF;
@@ -273,6 +246,7 @@ td.formcontrols {
 }
 td.formcontrols input {
 	font-weight: bold;
+	min-width: 65px;
 }
 td.formcontrols a {
 	color: #369 !important;
@@ -313,6 +287,7 @@ table.maintable th.lastpostinfo, table.maintable td.lastpostinfo {
 	text-align: left;
 	padding: 4px 6px 4px 6px;
 	border: 1px solid silver;
+	text-shadow: #4F4F4F 1px 1px 1px;
 }
 .msgbox p, .preview div.preview {
 	background-color: #EFEFEF;
