--- a/templates/default/admin.css
+++ b/templates/default/admin.css
@@ -205,12 +205,13 @@ h1#admintitle {
 #adminfunctionsmenu {
 	list-style: none;
 	margin-left: 0px !important;
-	line-height: 170%;
+	line-height: 175%;
 }
 #adminfunctionsmenu li {
 	display: inline;
 	border-left: 2px solid silver;
-	padding-left: 4px;
+	padding-left: 5px;
+	padding-right: 1px;
 }
 #adminbottomfix {
 	clear: both;
