- Added potential spammer status for users, restrictions and auto unset. - ACP General Configuration settings related to anti-spam grouped together.

--- a/templates/default/styles.css
+++ b/templates/default/styles.css
@@ -723,6 +723,12 @@ table.termsofuse {
 	margin-top: 5px;
 }
 
+.potential-spammer-notice {
+	color: #333;
+	font-style: italic;
+	padding-top: 3px;
+}
+
 #bottom {
 	clear: both;
 	float: left;
