--- a/templates/default/styles.css
+++ b/templates/default/styles.css
@@ -608,10 +608,11 @@ ul#panelmenu li#first {
 p#linkbar {
 	color: #323232;
 	text-align: center;
-	margin-bottom: 20px;
+	margin-bottom: 10px;
 }
 p#linkbar a {
-	margin: 0 2px 0 2px;
+	margin: 0 3px;
+	text-decoration: none;
 }
 p#linkbar #rss-feed-link {
 	background-image: url(gfx/rss.png);
